[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/EnemyBase/Enemy.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 529.001

[node name="EnemyBase" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="BulletPoint" type="Node2D" parent="."]

[node name="ShootingRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingRange"]
shape = SubResource( 1 )

[connection signal="body_entered" from="ShootingRange" to="." method="_on_ShootingRange_body_entered"]
[connection signal="body_exited" from="ShootingRange" to="." method="_on_ShootingRange_body_exited"]
